--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Adopt Me!</title>
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root">Requires javascript!</div>
   </body>
 
